<resources>
    <string name="app_name">MathQuizForDummies</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="input_username">Username</string>
    <string name="button_play">Play</string>
    <string name="bar_difficulty">Choose difficulty</string>
    <string name="textview">TextView</string>
    <string name="op3">op3</string>
    <string name="op2">op2</string>
    <string name="diff_media">medium</string>
    <string name="diff_facile">easy</string>
    <string name="diff_difficile">hard</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="record">record</string>
</resources>
